--- a/KoseaProject/src/main/webapp/WEB-INF/web.xml
+++ b/KoseaProject/src/main/webapp/WEB-INF/web.xml
@@ -43,5 +43,12 @@
 	 <filter-name>encodingFilter</filter-name><url-pattern>/*</url-pattern>   
 	 </filter-mapping>
 
+	<jsp-config>
+	    <taglib>
+	        <taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
+	        <taglib-location>/WEB-INF/lib/jstl.jar</taglib-location>
+	    </taglib>
+	</jsp-config>
+	
 
 </web-app>
